Regression: Nodegroups don't show up in node search anymore #101249

Closed
opened 2022-09-21 12:44:45 +02:00 by Simon Thommes · 8 comments
Member

System Information
Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-21 06:46, hash: ea79dab062
Worked: 2 days ago
Caused by bdb5754147

Short description of error
shift + a search doesn't show nodegroups

Exact steps for others to reproduce the error

  • Open attached file
  • Search for test-instance : {nav Shift A -> search}
    #101249.blend
**System Information** Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-21 06:46, hash: `ea79dab062` Worked: 2 days ago Caused by bdb5754147 **Short description of error** shift + a search doesn't show nodegroups **Exact steps for others to reproduce the error** - Open attached file - Search for `test-instance` : {nav Shift A -> search} [#101249.blend](https://archive.blender.org/developer/F13542730/T101249.blend)
Author
Member

Added subscribers: @HooglyBoogly, @SimonThommes

Added subscribers: @HooglyBoogly, @SimonThommes
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm. I suspect bdb5754147 is the first bad commit (I'll verify with git bisect)

I can confirm. I suspect bdb5754147 is the first bad commit (I'll verify with git bisect)
Pratik Borhade changed title from Nodegroups don't show up in node search anymore to Regression: Nodegroups don't show up in node search anymore 2022-09-21 12:58:19 +02:00
Author
Member

Thanks for bisecting and adding the reproduction steps :)

Thanks for bisecting and adding the reproduction steps :)
Hans Goudey self-assigned this 2022-09-21 18:54:04 +02:00
Member

Thanks a lot for the simple test file @PratikPB2123!

Thanks a lot for the simple test file @PratikPB2123!

This issue was referenced by 7e980f2b8c

This issue was referenced by 7e980f2b8cb96aa6d04dc72899d08473367eeeb9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101249
No description provided.